--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
-  <head>
-    <title>What's up?</title>
-  </head>
-  <body>
-    <div>linhll.github.io</div>
-  </body>
+
+<head>
+  <title>What's up?</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script>
+    document.getElementById("root").innerText = new Date();
+  </script>
+</body>
+
 </html>
