--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-
-<head>
-  <title>What's up?</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script>
-    document.getElementById("root").innerText = new Date();
-  </script>
-</body>
-
-</html>
+<!doctype html><html><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="favicon.ico" type="image/x-icon" sizes="48x48"/><title>Election Result</title><link href="main.css" rel="stylesheet"></head><body><div id="root"></div><script src="index.js"></script></body></html>
